eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-service-api-deployment
  labels:
    app: banking-service-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: banking-service-api
  template:
    metadata:
      labels:
        app: banking-service-api
    spec:
      containers:
      - name: banking-service-api
        image: 729371877866.dkr.ecr.us-east-2.amazonaws.com/banking-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
