eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-service-api-service
spec:
  selector:
    app: banking-service-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
