eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-service-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "api.famzzie.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: banking-service-api-service
            port:
              number: 80
  tls:
    - hosts:
      - api.famzzie.com
      secretName: banking-service-api-cert
